--- a/appsettings.json
+++ b/appsettings.json
@@ -7,8 +7,7 @@
     }
   },
   "AllowedHosts": "*",
-  "ConnectionStrings":
-  {
-    "CommanderConnection":"Server=localhost,1433;Initial Catalog=CommanderDB;User ID=<INSERT YOUR USER ID>;Password=<INSERT YOUR PASSWORD>;"
+  "ConnectionStrings": {
+    "CommanderConnection": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=commander;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False"
   }
 }
